IE fix for dropdown arrow. Fix for spacing when there is no subtitle

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -1751,7 +1751,7 @@ div[data-oembed-url]  > iframe {
         width: 100%;
         position: relative; 
         margin: 0 !important;
-        padding: 10px;
+        padding: 10px 10px 20px 10px;
         opacity: 1;
         display: block;
         margin-block-start: 1.33em;
@@ -1813,6 +1813,7 @@ div[data-oembed-url]  > iframe {
             font-weight: 600;
             line-height: 1.5rem;
             text-transform: uppercase;
+            margin-top: -10px;
 
             @include media-breakpoint-up(landscape_phone) {
                 font-size: 0.75rem;
@@ -2137,8 +2138,8 @@ input#edit-submit-community-grid {
     display: inline-block;
     content: "";
     width: 25px;
-    height: 25px;
-    top: 0px;
+    height: 40px; /*25px*/
+    top: -8px; /*0*/
     right: 0px;
     background: $beige;
     pointer-events: none;   /*important for letting it clickable over the icon*/
